--- a/src/components/Section2_Facts.css
+++ b/src/components/Section2_Facts.css
@@ -3,6 +3,8 @@
   width: 100%;
   min-height: 100vh;
   overflow: hidden;
+  z-index: 20;
+  margin-top: -1px;
 }
 
 .background-transition {
